--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,7 @@
 language: node_js
 node_js:
-  - 0.8
-  - 0.6
+  - 6
+  - 7
+  - 8
+after_script: 
+  - 'npm install coveralls && cat ./coverage/lcov.info | coveralls'
